# gtest-hello

./: Makefile.am  README  configure.ac  foo_test.cc
